examples/test/testpolicy1348.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1348
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key48: value15
      key16: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value23
      podSelector:
        matchLabels:
          key38: value16
          key28: value23
          key48: value36
